--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" class="document">
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="">
@@ -8,7 +8,7 @@
   <title>Mysterious Vacation</title>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
-<body>
+<body class="document__body js-body">
 
   <header class="page-header js-header">
     <div class="page-header__wrapper">
