--- a/8/index.html
+++ b/8/index.html
@@ -209,7 +209,7 @@
               <div class="prizes__icon">
                 <picture>
                   <source srcset="img/prize2-mob.svg" media="(orientation: portrait)">
-                  <img src="img/prize2.svg" alt="">
+                  <img src="img/secondary-award-animation.svg" alt="">
                 </picture>
               </div>
               <p class="prizes__desc">
