--- a/source/index.html
+++ b/source/index.html
@@ -81,6 +81,7 @@
     <section class="animation-screen"></section>
 
     <section class="screen screen--hidden screen--intro js-scrollspy" id="top">
+      <canvas class="screen__canvas" id="screen__canvas--intro">Обновите браузер</canvas>
       <div class="screen__wrapper">
         <div class="intro">
           <h1 class="intro__title">Таинственный отпуск</h1>
@@ -130,7 +131,7 @@
     </section>
 
     <section class="screen screen--hidden screen--story js-scrollspy" id="story">
-
+      <canvas class="screen__canvas" id="screen__canvas--story">Обновите браузер</canvas>
       <div class="slider swiper-container js-slider">
 
         <div class="swiper-wrapper">
