--- a/source/index.html
+++ b/source/index.html
@@ -79,9 +79,9 @@
   <main class="page-content">
 
     <section class="animation-screen"></section>
+    <canvas class="background" id="background-canvas--story">Обновите браузер</canvas>
 
     <section class="screen screen--hidden screen--intro js-scrollspy" id="top">
-      <canvas class="screen__canvas" id="screen__canvas--intro">Обновите браузер</canvas>
       <div class="screen__wrapper">
         <div class="intro">
           <h1 class="intro__title">Таинственный отпуск</h1>
@@ -131,7 +131,6 @@
     </section>
 
     <section class="screen screen--hidden screen--story js-scrollspy" id="story">
-      <canvas class="screen__canvas" id="screen__canvas--story">Обновите браузер</canvas>
       <div class="slider swiper-container js-slider">
 
         <div class="swiper-wrapper">
