--- a/source/index.html
+++ b/source/index.html
@@ -304,7 +304,7 @@
     </section>
 
     <section class="screen screen--hidden screen--game js-scrollspy" id="game">
-      <picture class="screen__picture">
+      <picture class="screen__picture" id="sonya">
         <img class="screen__image" src="img/sonya.png" srcset="img/sonya@2x.png 2x" alt="Искусственный интеллект «Соня»">
       </picture>
       <div class="screen__wrapper">
