--- a/source/index.html
+++ b/source/index.html
@@ -324,7 +324,8 @@
                   <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
                   <input type="text" class="form__field" id="message-field">
                   <button class="form__button btn">
-                    Узнать
+                    <span class="form__button-text">Узнать</span>
+                    <span aria-hidden class="form__button-spacer">Погнали!</span>
                     <svg width="18" height="19" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path stroke="currentColor" stroke-width="2" d="M9 19V1"/>
                       <path d="M1 9l8-8 8 8" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
