Анимация плэйсхолдера поля чата

--- a/source/index.html
+++ b/source/index.html
@@ -322,7 +322,7 @@
               <div class="chat__footer">
                 <form action="#" method="post" class="form" id="message-form">
                   <label for="message-field" class="visually-hidden">Поле для ввода вопроса</label>
-                  <input type="text" class="form__field" id="message-field">
+                  <input type="text" class="form__field" id="message-field" placeholder="Задай вопрос">
                   <button class="form__button btn">
                     <span class="form__button-text">Узнать</span>
                     <span aria-hidden class="form__button-spacer">Погнали!</span>
